les commandes pour le remote

--- a/index.html
+++ b/index.html
@@ -12,10 +12,14 @@
     <ul>
         <li>Les commandes</li>
         <ul>
-            <li>1) git init</li>
-            <li>2) git status</li>
-            <li>3) git add --all (tous les fichier) ou git add nom_fichier</li>
-            <li>4) git commit -m"mon msg ici"</li>
+            <li> 1) git init </li>
+            <li> 2) git status </li>
+            <li> 3) git add --all (tous les fichier) ou git add nom_fichier </li>
+            <li> 4) git commit -m"mon msg ici" </li>
+            <li> 5) git log</li>
+            <li> 6) git diff id_commit_1 id_commit_2 </li>
+            <li> 7) git remote add origin https://github.com/MezghichGit/labgit.git </li>
+            <li> 8) git push -u origin master </li>
         </ul>
 
 
