--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
             <li> 6) git diff id_commit_1 id_commit_2 </li>
             <li> 7) git remote add origin https://github.com/MezghichGit/labgit.git </li>
             <li> 8) git push -u origin master </li>
+            <li> 9) git branch nom_branche</li>
+            <li> 10) git checkout nom_branche</li>
         </ul>
 
 
