--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
             <li> 8) git push -u origin master </li>
             <li> 9) git branch nom_branche</li>
             <li> 10) git checkout nom_branche</li>
+            <li> 10) instruction sultan</li>
+            <li> 10) instruction sultan3</li>
+
         </ul>
 
 
